[package]
name = "project-origins"
version = "1.4.2"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0"
description = "Resolve project origins and kinds from a path"
keywords = ["project", "origin", "root", "git"]

documentation = "https://docs.rs/project-origins"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

rust-version = "1.58.0"
edition = "2021"

[dependencies]
futures = "0.3.29"
tokio = { version = "1.33.0", features = ["fs"] }
tokio-stream = { version = "0.1.9", features = ["fs"] }

[dev-dependencies]
miette = "7.2.0"
tracing-subscriber = "0.3.11"

[lints.clippy]
nursery = "warn"
pedantic = "warn"
module_name_repetitions = "allow"
similar_names = "allow"
cognitive_complexity = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_trait_access = "allow"
enum_glob_use = "allow"
option_if_let_else = "allow"
blocks_in_conditions = "allow"
