[package]
name = "watchexec-signals"
version = "1.0.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0 OR MIT"
description = "Watchexec's signal types"
keywords = ["watchexec", "signal"]

documentation = "https://docs.rs/watchexec-signals"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

rust-version = "1.61.0"
edition = "2021"

[dependencies.miette]
version = "5.3.0"
optional = true

[dependencies.thiserror]
version = "1.0.50"
optional = true

[dependencies.serde]
version = "1.0.183"
optional = true
features = ["derive"]

[target.'cfg(unix)'.dependencies.nix]
version = "0.27.1"
features = ["signal"]

[features]
default = ["fromstr", "miette"]
fromstr = ["dep:thiserror"]
miette = ["dep:miette"]
serde = ["dep:serde"]
