[package]
name = "watchexec-signals"
version = "4.0.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0 OR MIT"
description = "Watchexec's signal types"
keywords = ["watchexec", "signal"]

documentation = "https://docs.rs/watchexec-signals"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

rust-version = "1.61.0"
edition = "2021"

[dependencies.miette]
version = "7.2.0"
optional = true

[dependencies.thiserror]
version = "1.0.50"
optional = true

[dependencies.serde]
version = "1.0.183"
optional = true
features = ["derive"]

[target.'cfg(unix)'.dependencies.nix]
version = "0.29.0"
features = ["signal"]

[features]
default = ["fromstr", "miette"]
fromstr = ["dep:thiserror"]
miette = ["dep:miette"]
serde = ["dep:serde"]

[lints.clippy]
nursery = "warn"
pedantic = "warn"
module_name_repetitions = "allow"
similar_names = "allow"
cognitive_complexity = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_trait_access = "allow"
enum_glob_use = "allow"
option_if_let_else = "allow"
blocks_in_conditions = "allow"
needless_doctest_main = "allow"
