[package]
name = "watchexec-supervisor"
version = "1.0.3"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0 OR MIT"
description = "Watchexec's process supervisor component"
keywords = ["process", "command", "supervisor", "watchexec"]

documentation = "https://docs.rs/watchexec-supervisor"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

rust-version = "1.58.0"
edition = "2021"

[dependencies]
futures = "0.3.29"
tracing = "0.1.40"

[dependencies.process-wrap]
version = "8.0.0"
features = ["reset-sigmask", "tokio1"]

[dependencies.tokio]
version = "1.33.0"
default-features = false
features = ["macros", "process", "rt", "sync", "time"]

[dependencies.watchexec-events]
version = "2.0.1"
default-features = false
path = "../events"

[dependencies.watchexec-signals]
version = "2.1.0"
default-features = false
path = "../signals"

[target.'cfg(unix)'.dependencies.nix]
version = "0.28.0"
features = ["signal"]

[dev-dependencies]
boxcar = "0.2.4"
