[package]
name = "watchexec-filterer-globset"
version = "4.0.1"

authors = ["Matt Green <mattgreenrocks@gmail.com>", "Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0"
description = "Watchexec filterer component based on globset"
keywords = ["watchexec", "filterer", "globset"]

documentation = "https://docs.rs/watchexec-filterer-globset"
homepage = "https://watchexec.github.io"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

rust-version = "1.61.0"
edition = "2021"

[dependencies]
ignore = "0.4.18"
tracing = "0.1.40"

[dependencies.ignore-files]
version = "3.0.1"
path = "../../ignore-files"

[dependencies.watchexec]
version = "4.1.0"
path = "../../lib"

[dependencies.watchexec-events]
version = "3.0.0"
path = "../../events"

[dependencies.watchexec-filterer-ignore]
version = "4.0.1"
path = "../ignore"

[dev-dependencies]
tracing-subscriber = "0.3.6"
tempfile = "3"

[dev-dependencies.tokio]
version = "1.33.0"
features = [
	"fs",
	"io-std",
	"rt",
	"rt-multi-thread",
	"macros",
]

[features]
default = []

## Don't hide ignore::gitignore::Gitignore Debug impl
full_debug = []
