[package]
name = "watchexec-filterer-tagged"
version = "0.1.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0"
description = "Watchexec filterer component using tagged filters"
keywords = ["watchexec", "filterer", "tags"]

documentation = "https://docs.rs/watchexec-filterer-tagged"
homepage = "https://watchexec.github.io"
repository = "https://github.com/watchexec/watchexec"
readme = "README.md"

rust-version = "1.60.0"
edition = "2021"

[dependencies]
miette = "5.3.0"
thiserror = "1.0.26"
tracing = "0.1.26"
dunce = "1.0.2"
globset = "0.4.8"
ignore = "0.4.18"
nom = "7.0.0"
regex = "1.5.4"
unicase = "2.6.0"

[dependencies.ignore-files]
version = "1.0.1"
path = "../../ignore-files"

[dependencies.tokio]
version = "1.19.2"
features = [
	"fs",
]

[dependencies.watchexec]
version = "2.0.1"
path = "../../lib"

[dependencies.watchexec-filterer-ignore]
version = "1.0.0"
path = "../ignore"

[dev-dependencies]
tracing-subscriber = "0.3.6"

[dev-dependencies.project-origins]
version = "1.1.0"
path = "../../project-origins"

[dev-dependencies.tokio]
version = "1.19.2"
features = [
	"fs",
	"io-std",
	"sync",
]
